# CMakeLists.txt for Trees module

# Tree executables
add_executable(tree_traversals traversals.cpp)
add_executable(tree_views views.cpp)
add_executable(tree_properties properties.cpp)
add_executable(tree_lca lca.cpp)
add_executable(tree_bst bst_basics.cpp)
add_executable(tree_path_sums path_sums.cpp)
add_executable(tree_symmetric symmetric_mirror.cpp)
add_executable(tree_serialization serialization.cpp)
